--- a/commercial/app/views/masterclasses/masterclassLargeCard.scala.html
+++ b/commercial/app/views/masterclasses/masterclassLargeCard.scala.html
@@ -1,4 +1,7 @@
-@(event: model.commercial.Masterclass,
+@import model.commercial.Masterclass
+@import views.support.Item300
+
+@(event: Masterclass,
   clickMacro: Option[String],
   optAdvertClassNames: Option[Seq[String]] = None)
 
