--- a/common/app/views/fragments/commercial/paidForMeta.scala.html
+++ b/common/app/views/fragments/commercial/paidForMeta.scala.html
@@ -1,6 +1,7 @@
-@(dataId: Option[String] = None)(implicit request: RequestHeader)
-
+@import common.LinkTo
 @import views.html.fragments.inlineSvg
+
+@(dataId: Option[String] = None)(implicit request: RequestHeader)
 
 <div class="paidfor-meta">
     <span class="paidfor-meta__label">Paid content</span>
