--- a/common/app/views/fragments/image.scala.html
+++ b/common/app/views/fragments/image.scala.html
@@ -1,5 +1,5 @@
 @import layout.ContentWidths.MainMedia
-@import views.support.ImgSrc
+@import views.support.{ImgSrc, RenderClasses}
 
 @(
     picture: model.ImageMedia,
