--- a/common/app/views/fragments/imageFigure.scala.html
+++ b/common/app/views/fragments/imageFigure.scala.html
@@ -1,6 +1,6 @@
-@import model.ImageAsset
 @import layout.ContentWidths.MainMedia
-@import views.support.ImgSrc
+@import model.ImageAsset
+@import views.support.{ImgSrc, Item700}
 
 @(
     picture: model.ImageMedia,
