--- a/common/app/views/fragments/immersiveVideo.scala.html
+++ b/common/app/views/fragments/immersiveVideo.scala.html
@@ -1,3 +1,6 @@
+@import model.{ContentPage, EndSlateComponents, VideoPlayer}
+@import views.support.Video640
+
 @(page: ContentPage)(implicit request: RequestHeader)
 <div class="explore-video">
   <div class="gs-conatainer">
