--- a/discussion/app/views/fragments/commentSchema.scala.html
+++ b/discussion/app/views/fragments/commentSchema.scala.html
@@ -1,3 +1,6 @@
+@import views.support.withJsoup
+@import discussion.model.Comment
+
 @(comment: Comment, showMore: Boolean = false)(implicit request: RequestHeader)
 
 @import common.Edition
