--- a/identity/app/views/password/passwordResetConfirmation.scala.html
+++ b/identity/app/views/password/passwordResetConfirmation.scala.html
@@ -1,6 +1,9 @@
-@(page: model.Page, idRequest: services.IdentityRequest, idUrlBuilder: services.IdentityUrlBuilder, userIsLoggedIn: Boolean)(implicit request: RequestHeader)
-
+@import common.LinkTo
+@import model.Page
+@import services.{IdentityRequest, IdentityUrlBuilder}
 @import views.html.fragments.registrationFooter
+
+@(page: Page, idRequest: IdentityRequest, idUrlBuilder: IdentityUrlBuilder, userIsLoggedIn: Boolean)(implicit request: RequestHeader)
 
 @main(page, projectName = Option("identity")){
 }{
