--- a/sport/app/cricket/views/cricketMatch.scala.html
+++ b/sport/app/cricket/views/cricketMatch.scala.html
@@ -1,4 +1,6 @@
+@import common.LinkTo
 @import cricket.controllers.CricketMatchPage
+
 @(page: CricketMatchPage)(implicit request: RequestHeader)
 
 @main(page, "football"){ } {
