--- a/sport/app/football/views/fragments/teamlistBody.scala.html
+++ b/sport/app/football/views/fragments/teamlistBody.scala.html
@@ -1,3 +1,8 @@
+@import common.LinkTo
+@import football.controllers.TablesPage
+@import model.TeamUrl
+@import views.support.`package`.Seq2zipWithRowInfo
+
 @(pageModel: TablesPage, comps: Seq[model.Competition])(implicit request: RequestHeader)
 <div class="l-side-margins">
     <div class="monocolumn-wrapper">
