--- a/sport/app/football/views/tablesList/tablesPage.scala.html
+++ b/sport/app/football/views/tablesList/tablesPage.scala.html
@@ -1,3 +1,6 @@
+@import football.controllers.TablesPage
+@import views.support.`package`.Seq2zipWithRowInfo
+
 @(page: TablesPage)(implicit request: RequestHeader)
 
 @main(page.page, "football"){
