--- a/sport/app/rugby/views/fragments/groupTable.scala.html
+++ b/sport/app/rugby/views/fragments/groupTable.scala.html
@@ -1,5 +1,5 @@
-@import rugby.model.Match
-@import rugby.model.GroupTable
+@import rugby.model.{GroupTable, Match}
+@import views.support.RenderClasses
 
 @(theMatch: Match, group: Option[GroupTable])
 
