--- a/sport/app/rugby/views/fragments/matchStats.scala.html
+++ b/sport/app/rugby/views/fragments/matchStats.scala.html
@@ -1,5 +1,6 @@
-@import rugby.model.Match
-@import rugby.model.MatchStat
+@import rugby.model.{Match, MatchStat}
+@import views.{NudgePercent, PercentMaker}
+@import views.support.RenderClasses
 
 @(theMatch: Match, matchStat: Option[MatchStat])
 
