--- a/applications/app/views/all.scala.html
+++ b/applications/app/views/all.scala.html
@@ -1,8 +1,9 @@
-@(index: services.IndexPage, nav: PreviousAndNext)(implicit request: RequestHeader)
-
+@import layout.{ContainerDisplayConfig, ContainerLayout}
 @import model.pressed.CollectionConfig
+@import services.IndexPage
 @import views.support.PreviousAndNext
-@import layout.{ContainerLayout, ContainerDisplayConfig}
+
+@(index: IndexPage, nav: PreviousAndNext)(implicit request: RequestHeader)
 
 @main(index.page, projectName = Option("facia")){  }{
 <div class="l-side-margins">
