--- a/applications/app/views/survey/surveyMain.scala.html
+++ b/applications/app/views/survey/surveyMain.scala.html
@@ -1,8 +1,8 @@
-@(surveyPage: Page)(body: Html)(implicit request: RequestHeader)
-
 @import common.InlineJs
-@import templates.inlineJS.blocking.js._
 @import model.Page
+@import templates.inlineJS.blocking.js.enableStylesheets
+
+@(surveyPage: Page)(body: Html)(implicit request: RequestHeader)
 
 <!DOCTYPE html>
 <html id="js-context" class="js-off is-not-modern id--signed-out" data-page-path="@request.path">
