--- a/common/app/views/fragments/containers/facia_cards/videoContainer.scala.html
+++ b/common/app/views/fragments/containers/facia_cards/videoContainer.scala.html
@@ -1,9 +1,9 @@
-@(containerDefinition: layout.FaciaContainer, frontProperties: model.FrontProperties)(implicit requestHeader: RequestHeader)
-
-@import model.VideoPlayer
-@import views.support.Video700
+@import model.{InlineImage, VideoPlayer}
 @import views.html.fragments.media.video
 @import views.html.fragments.nav.treats
+@import views.support.{RenderClasses, Video640, Video700}
+
+@(containerDefinition: layout.FaciaContainer, frontProperties: model.FrontProperties)(implicit requestHeader: RequestHeader)
 
 <div class="fc-container__inner">
     <h2 class="video-title fc-container__header__title">
