--- a/common/app/views/fragments/containers/index.scala.html
+++ b/common/app/views/fragments/containers/index.scala.html
@@ -1,9 +1,12 @@
-@(trails: Seq[model.pressed.PressedContent], containerLayout: layout.ContainerLayout, containerIndex: Int, actualDate: org.joda.time.DateTime, page: model.MetaData, nav: PreviousAndNext, tzOverride: Option[org.joda.time.DateTimeZone] = None)(implicit request: RequestHeader, config: model.pressed.CollectionConfig)
-
 @import common.LinkTo
+@import layout.ContainerLayout
+@import model.MetaData
+@import model.pressed.{CollectionConfig, PressedContent}
+@import org.joda.time.{DateTime, DateTimeZone}
 @import views.html.fragments.containers.facia_cards.{date, slice}
-@import views.support.Commercial.container
 @import views.support.{GetClasses, PreviousAndNext}
+
+@(trails: Seq[PressedContent], containerLayout: ContainerLayout, containerIndex: Int, actualDate: DateTime, page: MetaData, nav: PreviousAndNext, tzOverride: Option[DateTimeZone] = None)(implicit request: RequestHeader, config: CollectionConfig)
 
 @* TODO Consolidate this with the master container template to get rid of repetition *@
 
