--- a/common/app/views/fragments/inlineJSNonBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSNonBlocking.scala.html
@@ -1,13 +1,14 @@
+@import common.InlineJs
+@import conf.switches.Switches.IdentityProfileNavigationSwitch
+@import conf.Configuration
+@import templates.inlineJS.nonBlocking.js._
+
 @()(implicit request: RequestHeader)
 
 @**
  * Use this fragment to add JavaScript that can improve the perceived rendering speed
  * but that is too blocking / risky to be put in the `head` of the document
  *@
-
-@import conf.switches.Switches.IdentityProfileNavigationSwitch
-@import conf.Configuration
-@import templates.inlineJS.nonBlocking.js._
 
 <script>
 // non-blocking JS to improve the perceived rendering speed
