--- a/common/app/views/fragments/items/elements/facia_cards/image.scala.html
+++ b/common/app/views/fragments/items/elements/facia_cards/image.scala.html
@@ -1,5 +1,8 @@
 @import layout.WidthsByBreakpoint
-@(classes: Seq[String], widths: WidthsByBreakpoint, maybeImageMedia: Option[model.ImageMedia] = None, maybePath: Option[String] = None, maybeSrc: Option[String] = None)
+@import model.ImageMedia
+@import views.support.{ImgSrc, RenderClasses}
+
+@(classes: Seq[String], widths: WidthsByBreakpoint, maybeImageMedia: Option[ImageMedia] = None, maybePath: Option[String] = None, maybeSrc: Option[String] = None)
 
 <picture>
     @* IE 9 needs this workaround as per https://scottjehl.github.io/picturefill/ *@
