--- a/common/app/views/fragments/linkText.scala.html
+++ b/common/app/views/fragments/linkText.scala.html
@@ -1,9 +1,8 @@
-@(faciaContent: model.pressed.PressedContent, info: RowInfo)(implicit request: RequestHeader)
-
-@import views.support.RowInfo
 @import common.LinkTo
-@import views.support.RemoveOuterParaHtml
 @import model.SupportedUrl
+@import views.support.{RemoveOuterParaHtml, RowInfo}
+
+@(faciaContent: model.pressed.PressedContent, info: RowInfo)(implicit request: RequestHeader)
 
 <a href="@LinkTo(SupportedUrl.fromFaciaContent(faciaContent))" data-link-name="@info.rowNum | text">
     @faciaContent.properties.linkText.map(RemoveOuterParaHtml.apply)
