--- a/common/app/views/fragments/relativeDate.scala.html
+++ b/common/app/views/fragments/relativeDate.scala.html
@@ -1,4 +1,7 @@
-@(webPublicationDate: org.joda.time.DateTime, isLive: Boolean = false, isFront: Boolean = false)(implicit request: RequestHeader)
+@import org.joda.time.DateTime
+@import views.support.Format
+
+@(webPublicationDate: DateTime, isLive: Boolean = false, isFront: Boolean = false)(implicit request: RequestHeader)
 
 <p class="relative-timestamp @if(isFront){ front-timestamp}">
     @if(isLive){
