--- a/identity/app/views/fragments/profile/saveForLater/contentListPage.scala.html
+++ b/identity/app/views/fragments/profile/saveForLater/contentListPage.scala.html
@@ -1,6 +1,8 @@
+@import common.LinkTo
 @import model.SaveForLaterItem
 @import views.html.fragments.items.facia_cards.contentCard
-@import common.LinkTo
+@import views.support.RenderClasses
+@import views.support.`package`.Seq2zipWithRowInfo
 
 @(articles: Seq[SaveForLaterItem])(implicit request: RequestHeader)
 <div class="saved-contents js-saved-contents" data-link-name="saved">
