--- a/sport/app/football/views/matchStats/matchStatsComponent.scala.html
+++ b/sport/app/football/views/matchStats/matchStatsComponent.scala.html
@@ -1,8 +1,9 @@
-@(page: MatchPage)(implicit request: RequestHeader)
+@import football.controllers.MatchPage
+@import model.TeamColours
+@import views.support.RenderClasses
+@import views.{NudgePercent, PercentMaker}
 
-@import views.support._
-@import views.FootballHelpers._
-@import feed._
+@(page: MatchPage)(implicit request: RequestHeader)
 
 @defining((page.hasPaStats, page.lineUp.homeTeam, page.lineUp.awayTeam, page.lineUp, TeamColours(page.lineUp.homeTeam, page.lineUp.awayTeam))){ case (hasStats, home, away, lineUp, teamColours) =>
 @if(hasStats) {
