--- a/article/app/views/fragments/emailArticleBody.scala.html
+++ b/article/app/views/fragments/emailArticleBody.scala.html
@@ -83,7 +83,7 @@
                     case ImageBlockElement(media, data, showCredit) => {
                         @EmailImage.bestFor(media).map { imageUrl =>
                             @fullRow {
-                                @block.url.fold {
+                                @block.url.filter(_ => article.isLiveBlog).fold {
                                     <img width="580" class="full-width" src="@imageUrl" @data.get("alt").map { alt => alt="@alt" }>
                                 } { linkUrl =>
                                     <a href="@linkUrl">
