Remove the min-height of advert__image when there is a pageskin

--- a/static/src/stylesheets/module/commercial/_adverts-capi.scss
+++ b/static/src/stylesheets/module/commercial/_adverts-capi.scss
@@ -173,6 +173,14 @@
         }
     }
 
+    .has-page-skin &:not(.advert--landscape) {
+        .advert__image {
+            @include mq(desktop) {
+                min-height: 0;
+            }
+        }
+    }
+
     .advert__image-container {
         height: auto;
     }
